<resources>
    <string name="app_name">AppCrawler</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="author">\neaway.lu@gmail.com</string>
    <string name="app_icon_description">Application Icon</string>
    <string name="sort_by">Sort by</string>
    <string name="sort_by_name">Name</string>
    <string name="sort_by_package">Package</string>
    <string name="hide">Hide packages</string>
    <string name="hide_google">Google</string>
    <string name="hide_android">Android</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Clear All</string>
    <string name="next">Next</string>
    <string name="start">Start</string>

    <string name="title_activity_settings">Settings</string>
    <string name="wait_timeout">Wait timeout</string>
    <string name="max_depth">Max depth</string>

</resources>
