<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MonkeyMainActivity" >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewSortBy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioButton
            android:id="@+id/radioPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="onSortButtonClick"
            android:text="@string/sort_by_package" />

        <RadioButton
            android:id="@+id/radioName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSortButtonClick"
            android:text="@string/sort_by_name" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewHide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:singleLine="true"
        android:text="@string/hide"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/checkBoxHideGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewHide"
        android:layout_alignBottom="@+id/textViewHide"
        android:layout_toRightOf="@+id/textViewHide"
        android:onClick="onHideButtonClick"
        android:text="@string/hide_google" />

    <CheckBox
        android:id="@+id/checkBoxHideAndroid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/checkBoxHideGoogle"
        android:layout_alignBottom="@+id/checkBoxHideGoogle"
        android:layout_toRightOf="@+id/checkBoxHideGoogle"
        android:onClick="onHideButtonClick"
        android:text="@string/hide_android" />

    <ListView
        android:id="@+id/appList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/buttonNext"
        android:layout_below="@+id/checkBoxHideGoogle" />

    <Button
        android:id="@+id/buttonNext"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:onClick="onStartButtonClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
