<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MonkeyStartActivity" >

    <TextView
        android:id="@+id/textViewWaitTimeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:text="@string/wait_timeout"
        android:gravity="left|center"
        android:layout_above="@+id/editTextMaxDepth"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/editTextWaitTimeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="5000"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/buttonStart" />

    <TextView
        android:id="@+id/textViewMaxDepth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_depth"
        android:layout_marginLeft="14dp"
        android:gravity="left|center"
        android:layout_alignBottom="@+id/editTextMaxDepth"
        android:layout_alignTop="@+id/editTextMaxDepth"
        android:layout_alignEnd="@+id/textViewWaitTimeout"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTextMaxDepth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="3"
        android:layout_below="@+id/editTextWaitTimeout"
        android:layout_alignStart="@+id/editTextWaitTimeout" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onStartButtonClick"
        android:text="@string/start" />

</RelativeLayout>